--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.3.1",
+        "@tailwindcss/typography": "^0.4.0",
+        "alpinejs": "^3.0.6",
         "autoprefixer": "^10.3.7",
         "axios": "^0.21",
         "browser-sync": "^2.27.5",
@@ -17,6 +20,7 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "tailwindcss": "^2.2.17"
+        "postcss-import": "^14.0.1",
+        "tailwindcss": "^2.2.2"
     }
 }
